welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: illegal start of simple expression
    else{gauche;if(isFacingTrail(color));avance()}
                                        ^SlugSnail:6: error: ';' expected but 'else' found.
     else{gauche();gauche();avance()}
     ^SlugSnail:12: error: ':' expected but ')' found.
def isFacingTrail(color):Boolean = {
                       ^SlugSnail:29: error: identifier expected but '}' found.
}
^